feat: comandos y server inicial en un hilo
Co-authored-by: MauricioBuzzone <mbuzzone@fi.uba.ar>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ edition = "2018"
 name = "redis-server"
 path = "src/main.rs"
 
+[[bin]]
+name = "redis-cliente"
+path = "src/cliente.rs"
+
 [dependencies.redis]
 version = "*"
 
