--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2018"
 
 [dependencies]
 [[bin]]
+name = "persistencia"
+path = "src/persistencia.rs"
+
+[[bin]]
 name = "redis-server"
 path = "src/main.rs"
 
