--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,9 @@ regex = "1"
 name = "redis-server"
 path = "src/main.rs"
 
+[[bin]]
+name = "integracion"
+path = "tests/integracion.rs"
+
 [dependencies.redis]
 version = "*"
